--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Публичное хранилище файлов. Вы можете выложить свой файл сюда, и все его увидят!">
 	</head>
 	<body>
-    <p><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="t.me/pyvasic">телеграм</a></b></p>
+    		<p><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
+		<h1>Файлы других пользователей:</h1>
 	</body>
 </html>
