--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
     		<p><font="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></font></p>
-		<h3><font="arial">Файлы других пользователей:<font="arial"></h3>
+		<h3><font="arial">Файлы других пользователей:</font></h3>
 	</body>
 </html>
