--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Публичное хранилище файлов. Вы можете выложить свой файл сюда, и все его увидят!">
 	</head>
 	<body>
-    		<p><font="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></font></p>
-		<h3><font="arial">Файлы других пользователей:</font></h3>
+    		<p font="Arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
+		<h3>Файлы других пользователей:</h3>
 	</body>
 </html>
