--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 		<meta charset="UTF-8">
 		<title>QuickGet - Публичное хранилище файлов</title>
 		<meta name="description" content="Публичное хранилище файлов. Вы можете выложить свой файл сюда, и все его увидят!">
+		<style>
+			#arial {
+			font-family = arial;
+			}
+		</style>
 	</head>
 	<body>
-    		<p font="Arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
-		<h3>Файлы других пользователей:</h3>
+		<p id="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
+		<h3 id="arial">Файлы других пользователей:</h3>
 	</body>
 </html>
