--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 		<meta charset="UTF-8">
 		<title>QuickGet - Публичное хранилище файлов</title>
 		<meta name="description" content="Публичное хранилище файлов. Вы можете выложить свой файл сюда, и все его увидят!">
-		<style>
-			#arial {
-			font-family = arial;
-			}
-		</style>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<p id="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
