--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<p id="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
 		<h3 id="arial">Файлы других пользователей:</h3>
+		<a href="/files/Cursor Adventure.pptx", id="arial">Cursor Adventure.pptx</a>
 	</body>
 </html>
