--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<body>
 		<p id="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
 		<h3 id="arial">Файлы других пользователей:</h3>
-		<a href="/files/CursorAdventure.pptx", id="arial">CursorAdventure.pptx</a>
-		<a href="/files/TheCursorAdventures.pptx", id="arial">TheCursorAdventures.pptx</a>
-		<a href="/files/ElectroCursorAdventure.pptx", id="arial">ElectroCursorAdventure.pptx</a>
+		<a href="/files/CursorAdventure.pptx", id="arial">CursorAdventure.pptx<br></a>
+		<a href="/files/TheCursorAdventures.pptx", id="arial">TheCursorAdventures.pptx<br></a>
+		<a href="/files/ElectroCursorAdventure.pptx", id="arial">ElectroCursorAdventure.pptx<br></a>
 	</body>
 </html>
