--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p id="arial"><b>Вы можете выложить свой файл тоже! Напишите мне в <a href="https://t.me/pyvasic">телеграм</a></b></p>
 		<h3 id="arial">Файлы других пользователей:</h3>
 		<a href="/files/CursorAdventure.pptx", id="arial">CursorAdventure.pptx<br></a>
-		<a href="/files/TheCursorAdventures.pptx", id="arial">TheCursorAdventures.pptx<br></a>
+		<a href="/files/TheCursorAdventures2.pptx", id="arial">TheCursorAdventures2.pptx<br></a>
 		<a href="/files/ElectroCursorAdventure.pptx", id="arial">ElectroCursorAdventure.pptx<br></a>
 	</body>
 </html>
